--- a/src/image-resize/package.json
+++ b/src/image-resize/package.json
@@ -27,6 +27,7 @@
         "@google-cloud/storage": "^6.5.2",
         "cors": "^2.8.5",
         "express": "^4.18.2",
+        "firebase": "^9.12.1",
         "sharp": "^0.31.1"
     },
     "devDependencies": {
